# p1harvester

./: README.md  pyproject.toml  requirements.txt
p1harvester/: __init__.py  cli.py  config.py  p1harvester.service  p1reader.py
sql/: view_gas_usage_m3.sql  view_gas_verbruik_m3.sql  view_net_afname_kWh.sql  view_net_usage_kWh.sql
systemd/: p1harvester.service
